# coffee-report

./: README.md  main.py  pyproject.toml
src/coffee_report/: __init__.py  cli.py  data_loader.py  reports.py
tests/: __init__.py  test_cli.py  test_data_loader.py  test_reports.py
tests/data/: session2.csv
