[project]
name = "coffee-report"
version = "0.1.0"
description = "Generate reports from student exam preparation CSV data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[project.scripts]
coffee-report = "coffee_report.cli:main"

[tool.uv.sources]
coffee-report = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coffee_report"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
